Download backup from Dropbox

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,6 +16,8 @@ jobs:
 
     - name: Download external dependencies
       run: make prepare RUN=''
+      env:
+        DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
 
     - name: Assemble the game changes
       run: make rom RUN=''
