--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,17 +15,17 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Download external dependencies
-      run: make prepare RUN=''
+      run: make prepare EXECUTE=''
       env:
         DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
 
-    - name: Assemble the game changes
-      run: make rom RUN=''
+    - name: Assemble game changes
+      run: make rom EXECUTE=''
 
-    - name: Create the patch
-      run: make patch RUN=''
+    - name: Create patch
+      run: make patch EXECUTE=''
 
     - uses: actions/upload-artifact@v2
       with:
-        name: Wide SNES patch
+        name: Super Mario World Widescreen patch
         path: ./build/release/smw.bps
